# mariner

./: .coveragerc  .env  .env.local  .env.local.mlflow  .env.local.ray  .env.secret  .env.test  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.local  Dockerfile.mlflow  Dockerfile.ray  Dockerfile.ray-head  Dockerfile.ray-worker  Dockerfile.ubuntu  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  deps.py  docker-compose-cicd.yml  docker-compose-gpu.yml  docker-compose-override  docker-compose.cicd.yml  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.yml  generated.txt  mypy.ini  pylintrc  pyproject.toml  pytest.ini  secrets-example.yaml  sonar-project.properties  test.sh  test_socket.py
app/: .flake8  .gitignore  deps.py  pyproject.toml  pytest.ini
app/alembic/: env.py
app/alembic/versions/: 03cb39886a9f_add_deployment_entity.py  055c29173b97_add_experiment_entity.py  07babf75614f_add_epochs_column_to_experiment_model.py  137c5550f06b_add_missing_columns_to_experiment.py  19022f3b5dd5_add_split_columns_to_dataset.py  258d5633e6e7_add_on_cascade_delete_to_dataset_close_.py  284b6c793fa2_.py  2f6015f0107c_add_model_entity.py  45d3f4178195_add_cascade_delete_model_version_experiments_table_.py  474957253b99_change_dataset_name_to_be_unique.py  620bcc163335_add_metrics_columns_to_experiment.py  69359f98ade3_add_deployment_entity.py  738947765abf_initial_seed.py  76b22dd4b526_add_relationship_between_model_and_.py  818d34e7127b_add_event_and_eventreads.py  9b63ef759cef_add_dataset_view_to_model_entity.py  9ba720656482_add_column_description_entity.py  9d8ee3ec4f15_.py  a5532ddff889_add_time_columns_to_model_modelversoin_.py  b0aeaff2380a_group_column_metadata_in_single_entity.py  c3d9920904f4_add_split_column_in_dataset.py  c6c90f1ad83c_add_column_metadata_entity.py  c802dd15b21a_.py  d74e0b05fab5_fix_ondelete_rule_of_dataset_foreign_.py  ee51bb8172a6_add_stack_trace_column_to_experiment.py  eef736dd20e3_persist_model_version_with_model_config_.py  fda7857a2aa2_add_experiment_name_column_to_.py  fe0301dab9b2_add_deployment.py
app/app/: backend_pre_start.py  changelog.py  main.py  pytest.ini  tests_pre_start.py  utils.py
app/app/api/: deps.py  websocket.py
app/app/builder/: __init__.py  dataset.py  model.py  splitters.py  storage.py  utils.py  views.py
app/app/core/: aws.py  config.py  logger.py  mlflowapi.py  rayapy.py  security.py
app/app/crud/: base.py
app/app/db/: base.py  init_db.py
app/app/schemas/: __init__.py  api.py
app/app/tests/: conftest.py  test_changelog.py  test_utils.py
app/notebooks/: CustomDataset.ipynb  DAGGeneration.ipynb  DocsIntrospectionAnalysis.ipynb  ExampleModel.ipynb  ModelBuilding.ipynb  ModelDeployment.ipynb  ModelDeploymentLocal.ipynb
app/scripts/: format-single.sh  generate-code.sh  integrationtest.sh  lint.sh  unittest.sh
backend/: .env  .env.secret  Torch-Model-Test.ipynb  alembic.ini  backend.dockerfile  conf.toml  deps.py  log_config.json  pylintrc  pyproject.toml  pytest.ini
backend/api/: deps.py  deps_flow.py  fastapi_app.py  logging.py  main.py  startup_functions.py  websocket.py
backend/api/api_v1/: api.py
backend/app/: pyproject.toml
backend/cli/: __main__.py
backend/cli/admin/: group.py
backend/cli/load_testing/: group.py
backend/entrypoints/: mlflow.sh  ray-head.sh  ray-worker.sh
backend/entrypoints-minikube/: mlflow.sh
backend/fleet/: __init__.py  base_schemas.py  data_types.py  dataset_schemas.py  exceptions.py  file_utils.py  metrics.py  mlflow.py  model_functions.py  model_schemas.py  models.py  options.py  overrides.yml  preprocessing.py  pyproject.toml  stats.py  yaml_model.py
backend/fleet/model_builder/: __init__.py  component_builder.py  component_overrides.yml  components_query.py  dataset.py  generate.py  layers_schema.py  model.py  model_schema_query.py  optimizers.py  options.py  schemas.py  splitters.py  storage.py  utils.py  views.py
backend/fleet/ray_actors/: dataset_transforms.py  deployments_manager.py  model_check_actor.py  tasks.py  training_actors.py
backend/fleet/scikit_/: __init__.py  model_functions.py  schemas.py
backend/fleet/torch_/: __init__.py  model_functions.py  models.py  schemas.py
backend/fleet/train/: custom_logger.py
backend/fleet/utils/: data.py  dataset.py  graph.py
backend/fleet/validation/: checker.py  functions.py  rules.py  validation_schema.py
backend/mariner/: __init__.py  changelog.py  datasets.py  deploy.py  deployment.py  events.py  experiments.py  models.py  oauth.py  stats.py  tasks.py  units.py  users.py  utils.py
backend/mariner/alembic/: env.py
backend/mariner/core/: aws.py  config.py  github.py  mlflowapi.py  security.py
backend/mariner/db/: base_class.py  init_db.py  session.py
backend/mariner/entities/: __init__.py  dataset.py  deploy.py  deployment.py  event.py  experiment.py  model.py  oauth_state.py  user.py
backend/mariner/exceptions/: __init__.py  auth_exceptions.py  deploy_exceptions.py  deployment_exceptions.py  model_exceptions.py  user_exceptions.py
backend/mariner/ray_actors/: dataset_transforms.py  deployments_manager.py  model_check_actor.py  training_actors.py
backend/model_builder/: components_query.py  layers_schema.py  model.py  model_schema_query.py  splitters.py
backend/notebooks/: CustomDataset.ipynb  CustomModelV2.ipynb  DAGGeneration.ipynb  DocsIntrospectionAnalysis.ipynb  ExampleModel.ipynb  Fleet Model Training.ipynb  Latest-Model-Train-And-Predict.ipynb  ModelBuilding.ipynb  ModelDeployment.ipynb  ModelDeploymentLocal.ipynb  MoleculeFeaturizedModel.ipynb  Preprocessing Pipeline.ipynb  SAMPL.csv  ScikitModels.ipynb  Splitters.ipynb  TorchModelTest.ipynb
backend/oauth_providers/: __init__.py  genentech.py  github.py  main.py
backend/scripts/: check-format.sh  email-list.py  format-single.sh  format-staged.sh  format.sh  generate-code.sh  istio-ip.sh  lint-single.sh  lint.sh  minikube-setup-scripts.sh  pydeps-generate.sh  pylint_packages.py  ray-head-probe.sh  ray-worker-probe.sh
backend/tests/: conftest.py
(+1269 files in other folders)
