[tool.poetry]
name = "fleet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.x"
lightning = "^2.0.0"
torch = {extras = ["cpu"], version = "==2.0.0"}
torchsummary = "^1.5.1"
torchmetrics = "^0.11.4"
scikit-learn = "^1.2.2"
mlflow = {version = "2.2.2", extras = ["extras"]}
ray = "2.3.1"
typing-extensions = "^4.5.0"
pydantic = "^1.10.7"
humps = "^0.2.2"

[tool.poetry.group.dev.dependencies]
click = "8.0.4"
pre-commit = "^2.20.0"
mypy = "^0.971"
mockito = "^1.4.0"
black = "^21.10b0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
matplotlib = "^3.5.2"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-timeout = "^2.1.0"
jupyterlab = "^3.5.0"
isort = "^5.10.1"
pylint = "^2.15.5"
pylint-pydantic = "^0.1.4"
coverage = "^7.1.0"
pytest-dotenv = "^0.5.2"
docstr-coverage = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
